--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "build/ffmpeg"]
 	path = build/ffmpeg
 	url = git://source.ffmpeg.org/ffmpeg.git
+[submodule "build/libvpx"]
+	path = build/libvpx
+	url = https://chromium.googlesource.com/webm/libvpx
