--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "ffmpeg-webm.js",
   "scripts": {
     "build": "build/build.sh",
+    "clean": "build/clean.sh",
     "test": "mocha"
   },
   "repository": {
