--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "ffmpeg-webm.js",
   "scripts": {
     "build": "build/build.sh",
-    "test": "mocha"
+    "bench": "test/bench.js",
+    "test": "mocha test/test.js"
   },
   "repository": {
     "type": "git",
