--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "video"
   ],
   "author": "Kagami Hiiragi",
-  "license": "LGPL-2.1+",
+  "license": "(LGPL-2.1+ OR GPL-2.0)",
   "bugs": {
     "url": "https://github.com/Kagami/ffmpeg.js/issues"
   },
