Fix opus submodule repo
Repo at opus-codec is no longer valid and xiph's repo is too slow.
So use github mirror instead.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,7 +4,7 @@
 	ignore = dirty
 [submodule "build/opus"]
 	path = build/opus
-	url = git://git.opus-codec.org/opus.git
+	url = https://github.com/xiph/opus.git
 	ignore = dirty
 [submodule "build/libass"]
 	path = build/libass
