--- a/.gitmodules
+++ b/.gitmodules
@@ -8,7 +8,7 @@
 	ignore = dirty
 [submodule "build/lame"]
 	path = build/lame
-	url = https://github.com/rbrito/lame.git
+	url = https://github.com/Kagami/lame-svn.git
 	ignore = dirty
 [submodule "build/x264"]
 	path = build/x264
